k8s/admin-report-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-report-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-report-service
  template:
    metadata:
      labels:
        app: admin-report-service
    spec:
      containers:
        - name: admin-report-service
          image: ddasick/byulassign:msa-admin-report-service
          ports:
            - containerPort: 8089
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi

---
apiVersion: v1
kind: Service
metadata:
  name: admin-report-service
spec:
  type: ClusterIP
  selector:
    app: admin-report-service
  ports:
    - name: admin-report-service
      protocol: TCP
      port: 8089
      targetPort: 8089
