k8s/member-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: ddasick/byulassign:efg
          ports:
            - containerPort: 8082
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - name: user-service
      protocol: TCP
      port: 8082
      targetPort: 8082
