k8s/user-report-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-report-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-report-service
  template:
    metadata:
      labels:
        app: user-report-service
    spec:
      containers:
        - name: user-report-service
          image: ddasick/byulassign:msa-user-report-service
          ports:
            - containerPort: 8085
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1000Mi

---
apiVersion: v1
kind: Service
metadata:
  name: user-report-service
spec:
  type: ClusterIP
  selector:
    app: user-report-service
  ports:
    - name: user-report-service
      protocol: TCP
      port: 8085
      targetPort: 8085
